// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FULL App unit test at coins page, if the results have a filter successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        onClick={[Function]}
      >
        Coins
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value=""
      />
      <button
        className="ctrl-btn"
        id="reset"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="bitcoin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Bitcoin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                1
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BTC
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/binance-coin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="binance-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              BNB
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="BNB"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                4
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BNB
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/usd-coin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="usd-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              USD Coin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="USD Coin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                5
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDC
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at coins page, when a coin from the list is clicked successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/coins"
        onClick={[Function]}
      >
        &lt;
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        Bitcoin
      </a>
    </nav>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="coinDetails"
    >
      <article
        className="coin"
        data-testid="bitcoin"
      >
        <div
          className="coinBasics"
        >
          <div
            className="iconContainer"
          >
            <img
              alt="Bitcoin"
              className="coinIcon"
              data-testid="coinIcon"
              src="generic-crypto-mock-logo.svg"
            />
          </div>
          <section
            className="descriptionSection"
          >
            <h3
              className="coinName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <h4
              className="sectionCategory symbolCategory"
              data-testid="coinSymbol"
            >
              Symbol
            </h4>
            <p
              className="sectionData symbolData"
            >
              BTC
            </p>
          </section>
        </div>
        <div
          className="coinDescription"
        >
          <section
            className="descriptionSection"
          >
            <h3
              className="sectionCategory rankCategory"
            >
              Rank
            </h3>
            <p
              className="sectionData rankData"
              data-testid="coinRank"
            >
              1
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionCategory"
            >
              Price
            </h4>
            <p
              className="sectionData"
              data-testid="coinPrice"
            >
              27,242.27
            </p>
            <h4
              className="sectionCategory"
            >
              Volume
            </h4>
            <p
              className="sectionData"
              data-testid="coinVolume"
            >
              82,809,392,859.99
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionSubCategory"
            >
              Price Change
            </h4>
            <h5
              className="sectionTitle"
            >
              1 hour
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1h"
            >
              -0.17
            </p>
            <h5
              className="sectionTitle"
            >
              1 day
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1d"
            >
              -2.98
            </p>
            <h5
              className="sectionTitle"
            >
              1 week
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1w"
            >
              -10.38
            </p>
          </section>
        </div>
      </article>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at details page, the navbar shows successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/coins"
        onClick={[Function]}
      >
        &lt;
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        Bitcoin
      </a>
    </nav>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="coinDetails"
    >
      <article
        className="coin"
        data-testid="bitcoin"
      >
        <div
          className="coinBasics"
        >
          <div
            className="iconContainer"
          >
            <img
              alt="Bitcoin"
              className="coinIcon"
              data-testid="coinIcon"
              src="generic-crypto-mock-logo.svg"
            />
          </div>
          <section
            className="descriptionSection"
          >
            <h3
              className="coinName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <h4
              className="sectionCategory symbolCategory"
              data-testid="coinSymbol"
            >
              Symbol
            </h4>
            <p
              className="sectionData symbolData"
            >
              BTC
            </p>
          </section>
        </div>
        <div
          className="coinDescription"
        >
          <section
            className="descriptionSection"
          >
            <h3
              className="sectionCategory rankCategory"
            >
              Rank
            </h3>
            <p
              className="sectionData rankData"
              data-testid="coinRank"
            >
              1
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionCategory"
            >
              Price
            </h4>
            <p
              className="sectionData"
              data-testid="coinPrice"
            >
              27,242.27
            </p>
            <h4
              className="sectionCategory"
            >
              Volume
            </h4>
            <p
              className="sectionData"
              data-testid="coinVolume"
            >
              82,809,392,859.99
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionSubCategory"
            >
              Price Change
            </h4>
            <h5
              className="sectionTitle"
            >
              1 hour
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1h"
            >
              -0.17
            </p>
            <h5
              className="sectionTitle"
            >
              1 day
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1d"
            >
              -2.98
            </p>
            <h5
              className="sectionTitle"
            >
              1 week
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1w"
            >
              -10.38
            </p>
          </section>
        </div>
      </article>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at details page, when the back (<) button is clicked successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        onClick={[Function]}
      >
        Coins
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value=""
      />
      <button
        className="ctrl-btn"
        id="reset"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="bitcoin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Bitcoin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                1
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BTC
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/binance-coin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="binance-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              BNB
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="BNB"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                4
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BNB
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/usd-coin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="usd-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              USD Coin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="USD Coin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                5
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDC
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at homepage, when click on start button successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        onClick={[Function]}
      >
        Coins
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value=""
      />
      <button
        className="ctrl-btn"
        id="reset"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="bitcoin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Bitcoin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                1
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BTC
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/binance-coin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="binance-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              BNB
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="BNB"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                4
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BNB
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/usd-coin"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="usd-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              USD Coin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="USD Coin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                5
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDC
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test back in the coins page, you can filter the results successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        onClick={[Function]}
      >
        Coins
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value="eth"
      />
      <button
        className="ctrl-btn"
        id="reset"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test when the app loads, shows the homepage successful snapshot test 1`] = `
<main>
  <h1>
    Welcome
  </h1>
  <a
    className="fsControls btn btn-home btn-start"
    href="/coins"
    onClick={[Function]}
  >
    Start
  </a>
  <a
    className="fsControls btn btn-home btn-about"
    href="/"
    onClick={[Function]}
  >
    About
  </a>
</main>
`;
